# opengl_gym

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: config.cmake  externalLibs.cmake
include/: Common.hpp  IndexBuffer.hpp  OpenGlGym.hpp  Renderer.hpp  Shader.hpp  VertexBufferLayout.hpp
res/shaders/: Basic.shader
src/: Common.cpp  IndexBuffer.cpp  OpenGlGym.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
src/Common/: CMakeLists.txt  Common.cpp  OGGCommon.hpp
src/OpenGlAbstraction/: CMakeLists.txt  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Playtests/: CMakeLists.txt  TestBatchRendering.cpp  TestBatchRendering.hpp  TestClearColor.cpp  TestMenu.cpp  TestMenu.hpp  TestTexture2D.cpp  TestTexture2D.hpp
src/res/shaders/: Quad.shader
tests/: TestBase.hpp  TestClearColor.cpp  TestClearColor.hpp  TestMenu.hpp  TestTexture2D.cpp  TestTexture2D.hpp
